--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -38,6 +38,17 @@ resources:
     private_key: ((concourse_bot_private_key))
     uri: git@github.com:concourse/porter
   icon: tag
+- name: kind-release
+  type: github-release
+  source:
+    owner: kubernetes-sigs
+    repository: kind
+    access_token: ((concourse_github_dummy.access_token))
+    pre_release: true
+- name: kind-on-c
+  type: git
+  source:
+    uri: https://github.com/pivotal-k8s/kind-on-c
 resource_types:
 - name: docker-image
   type: registry-image
@@ -62,16 +73,40 @@ jobs:
       build: porter-repo
       dockerfile: porter-repo/Dockerfile
       load_base: ubuntu-bionic
+- name: integration-test
+  plan:
+    - in_parallel:
+        steps:
+        - get: porter-image-dev
+          trigger: true
+          passed:
+          - build-ubuntu
+        - get: porter-repo
+          passed:
+          - build-ubuntu
+        - get: kind-on-c
+        - get: kind-release
+          params:
+            globs:
+              - kind-linux-amd64
+    - task: run-kind
+      privileged: true
+      file: kind-on-c/kind.yaml
+      params:
+
+        KIND_TESTS: |
+          # your actual tests go here!
+          kubectl create secret generic gcp-secrets --from-literal=gcp-service-key=((gcp_service_key))
+          kubectl get nodes -o wide
+          kubectl apply -f porter-repo/ci/pod.yaml
 - name: publish-major
   plan:
   - in_parallel:
       steps:
       - get: porter-repo
         passed:
-        - build-ubuntu
+        - integration-test
       - get: porter-image-dev
-        passed:
-        - build-ubuntu
         params:
           save: true
       - get: version
@@ -89,10 +124,8 @@ jobs:
       steps:
       - get: porter-repo
         passed:
-        - build-ubuntu
+        - integration-test
       - get: porter-image-dev
-        passed:
-        - build-ubuntu
         params:
           save: true
       - get: version
@@ -110,10 +143,8 @@ jobs:
       steps:
       - get: porter-repo
         passed:
-        - build-ubuntu
+        - integration-test
       - get: porter-image-dev
-        passed:
-        - build-ubuntu
         params:
           save: true
       - get: version
