add pull pod after the push to test the inputs container
Signed-off-by: Denise Yu <dyu@pivotal.io>
Co-authored-by: Denise Yu <dyu@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -111,7 +111,9 @@ jobs:
     params:
       KIND_TESTS: |
         kubectl create secret generic gcp-secrets --from-literal=gcp-service-key='((gcp_service_key))'
-        kubectl apply -f inputs/porter-repo/ci/pod.yaml
+        kubectl apply -f inputs/porter-repo/ci/pod-push.yaml
+        kubectl wait --for=condition=complete pod/gcp-push-pod
+        kubectl apply -f inputs/porter-repo/ci/pod-pull.yaml
 - name: publish-major
   plan:
   - in_parallel:
