--- a/ci/pod-push.yaml
+++ b/ci/pod-push.yaml
@@ -1,23 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: hello-world
+  name: gcp-push-pod
 spec:  # specification of the pod's contents
   restartPolicy: Never
   containers:
-    - name: input
-      image: concourse/porter-dev:dev
-      command: ["/opt/porter/in/inputs"]
-      args: ["--source-path", "/in/somefile.tar", "--bucket-url", "gs://porter-dev-bucket", "--destination-path", "/workspace/inputs" ]
-      volumeMounts:
-      - name: workspace
-        mountPath: "/workspace"
-      - name: secret
-        mountPath: "/secret"
-        readOnly: true
-      env:
-      - name: "GOOGLE_APPLICATION_CREDENTIALS"
-        value: "/secret/gcp-service-key"
     - name: hello
       image: busybox
       command: ['sh', '-c', 'echo Hello Concourse > /workspace/hello']
@@ -25,9 +12,10 @@ spec:  # specification of the pod's contents
         - name: workspace
           mountPath: "/workspace"
     - name: output
+      imagePullPolicy: Always
       image: concourse/porter-dev:dev
       command: ["/opt/porter/out/outputs"]
-      args: ["--source-path", "/workspace/hello", "--bucket-url", "gs://porter-dev-bucket", "--destination-path", "/out/hello" , "--pod-name", "hello-world", "--container-name", "hello"]
+      args: ["--source-path", "/workspace", "--bucket-url", "gs://porter-dev-bucket", "--destination-path", "out.tar" , "--pod-name", "gcp-push-pod", "--container-name", "hello"]
       volumeMounts:
         - name: workspace
           mountPath: "/workspace"
