Use GCP cluster
Wait for cluster to be healthy before scheduling pods

Signed-off-by: Denise Yu <dyu@pivotal.io>

--- a/ci/pod-push.yaml
+++ b/ci/pod-push.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: gcp-push-pod
-spec:  # specification of the pod's contents
+spec:
   restartPolicy: Never
   containers:
     - name: hello
