--- a/ci/pod-pull.yaml
+++ b/ci/pod-pull.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: gcp-pull-pod
-spec:  # specification of the pod's contents
+spec:
   restartPolicy: Never
   containers:
     - name: input
