--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -71,10 +71,16 @@ jobs:
     passed:
     - build-ubuntu
   - task: run-tests
-    privileged: true
     file: porter-repo/ci/tasks/integration-test.yaml
     params:
       GCP_SERVICE_KEY: ((gcp_service_key))
+    ensure:
+      task: cleanup
+      file: porter-repo/ci/tasks/cleanup.yaml
+      params:
+        GCP_SERVICE_KEY: ((gcp_service_key))
+
+
 - name: publish-major
   plan:
   - in_parallel:
