wip runner to keep pod running in case of failure
Signed-off-by: Divya Dadlani <ddadlani@pivotal.io>

--- a/ci/pod-run.yaml
+++ b/ci/pod-run.yaml
@@ -14,7 +14,7 @@ spec:
         - name: tools
           mountPath: "/tools"
   containers:
-    - name: input
+    - name: task-container
       image: ubuntu
       imagePullPolicy: Always
       command: ["/tools/runner"]
